# sine

./: .gitignore  .release_time  CMakeLists.txt  Makefile  README.md  test.cc
docs/html/: _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _r_e_a_d_m_e_8md.html  annotated.html  canvas_8cc.html  canvas_8h.html  canvas_8h_source.html  class_sine_1_1_canvas-members.html  class_sine_1_1_canvas.html  class_sine_1_1_color-members.html  class_sine_1_1_color.html  class_sine_1_1_filter-members.html  class_sine_1_1_filter.html  class_sine_1_1_filters_1_1_darken-members.html  class_sine_1_1_filters_1_1_darken.html  class_sine_1_1_filters_1_1_desaturate-members.html  class_sine_1_1_filters_1_1_desaturate.html  class_sine_1_1_filters_1_1_filter-members.html  class_sine_1_1_filters_1_1_filter.html  class_sine_1_1_filters_1_1_gaussian_blur-members.html  class_sine_1_1_filters_1_1_gaussian_blur.html  class_sine_1_1_filters_1_1_lighten-members.html  class_sine_1_1_filters_1_1_lighten.html  class_sine_1_1_filters_1_1_pixel_filter-members.html  class_sine_1_1_filters_1_1_pixel_filter.html  class_sine_1_1_filters_1_1_pixel_filter_3_01_t_00_01_func___no_ref_3_01_t_01_4_01_4-members.html  class_sine_1_1_filters_1_1_pixel_filter_3_01_t_00_01_func___no_ref_3_01_t_01_4_01_4.html  class_sine_1_1_filters_1_1_pixel_filter_3_01_t_00_01_func___ref_3_01_t_01_4_01_4-members.html  class_sine_1_1_filters_1_1_pixel_filter_3_01_t_00_01_func___ref_3_01_t_01_4_01_4.html  (+284 more)
include/: stb_image.cc  stb_image.h  stb_image_write.cc
tests/: print.h  test.cc  timer.cc  timer.h
(+239 files in other folders)
